@@ -1,5 +1,5 @@
 <html><body>
 To stay up-to-date in the world of jEdit,
 subscribe to the mailing lists by visiting
-<font color="blue"><u>http://www.jedit.org/?page=lists</u></font>.
+<font color="blue"><u>http://www.jedit.org/?page=feedback</u></font>.
 </body></html>
